# random-words-cli

./: Cargo.toml  README.md  build.sh
src/: main.rs
